2010-04-12  Alan McGovern  <amcgovern@novell.com>

	* textblock.h:
	* textblock.cpp: Add a bunch of missing SetObjectType calls to
	  some new classes. Remove a bunch of DPs declared on Inline
	  as they are now declared on TextElement.

	* uielement.h: Add missing defaultvalues.

2010-04-12  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.h: Add a missing DefaultValue.

2010-04-09  Jeffrey Stedfast  <fejj@novell.com>

	* pal/gtk/pal-gtk.cpp: Implemented new required methods for the
	InstallerService.

	* pal/pal.cpp (CheckAndDownloadUpdateAsync): New method to check
	for and download any updates.

	* application.cpp (CheckAndDownloadUpdateAsync): Implemented.
	(SetInstallState): Emit the InstallStateChanged event.

	* eventargs.cpp|h: Added CheckAndDownloadUpdateCompletedEventArgs.

2010-04-09  Alan McGovern  <amcgovern@novell.com>

	* textblock.h: Hide the field and setter for
	  RichTextElement.BlocksProperty and add in missing default
	  values.

2010-04-09  Alan McGovern  <amcgovern@novell.com>

	* collection.h: BlockCollection has no public ctor.

2010-04-09  Alan McGovern  <amcgovern@novell.com>

	* canvas.h: Don't make a public managed field for
	  Canvas.ZProperty.

2010-04-09  Alan McGovern  <amcgovern@novell.com>

	* validators.h:
	* validators.cpp:
	* frameworkelement.h: Add a validator for
	  FrameworkElement::Style which looks for circular references
	  in the Style::BasedOn tree.

2010-04-07  Jeffrey Stedfast  <fejj@novell.com>

	* pal/gtk/install-dialog.cpp (install_launcher_script): Don't need
	to set an environment variable anymore.

	* application.cpp (IsRunningOutOfBrowser): Use the
	InstallerService to determine if we are running OutOfBrowser or
	not.

	* pal/gtk/pal-gtk.cpp
	(MoonInstalelrServiceGtk::IsRunningOutOfBrowser): New method to
	determine if the Xap Uri is an OOB Uri.

	* runtime.cpp (runtime_is_running_out_of_browser): Removed.
	(runtime_init): Don't check an environment variable for OOB mode,